added deploy.yaml in correct directory12

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,4 +24,5 @@ jobs:
           context: ./worker
           file: ./Dockerfile
           push: true
-          tags: fuad1993/docker-hub-test:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
